--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                 <div class="vertical">
                     <!-- <img class="user-img" src="" alt="img"> -->
                     <div class="vertical-tittle">
-                        communication
+                        Communication
                     </div>
-                    <div class="virtical-discription">communication is one of the best way to express your idea among other and I am good in it.</div>
+                    <div class="virtical-discription">Communication is one of the best way to express your idea among other and I am good in it.</div>
                 </div>
                 
             </div>
